<resources>
    <string name="app_name">ReFloated</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="IntroText">Welcome to Flyingboat. An alternative client to Floatplane\'s official client. Open-source and hopefully can help the team improve the official experience!</string>
    <string name="GoBackToHome">Go back home!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="content_for_today">Here\'s your subscribed content from your trusty creators!</string>
    <string name="discover_content_today">Why not try something new? It\'s always great to discover new content and learn more!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be more than 5 characters</string>
    <string name="invalid_token">Token must be more than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_label">Username or Email</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="send_auth_token">Send Code</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loading_string">Loading</string>
    <string name="initial_app_loading">Entering airport…</string>
    <string name="logging_in_string">Checking Pilot Credentials…</string>
    <string name="two_factor_logging_in_string">Polishing Credentials and taking a closer look…</string>
    <string name="logout_label">Logout</string>
    <string name="account_label">Account</string>
    <string name="failed_load_image">Failed to load the thumbnail</string>
    <string name="loading_content">Loading more content</string>
    <string name="two_factor_hint">Authentication Code (ex: 123456)</string>
    <string name="enter_credentials">Please enter your credentials</string>
    <string name="title_home">Home</string>
    <string name="title_creators">Creators</string>
    <string name="title_library">Library</string>
    <string name="subscribed">Subscribed</string>
    <string name="unsubscribed">Available Creators</string>
    <string name="posts_title">Posts</string>
    <string name="playlists_title">Playlists</string>
    <string name="about_tab">About</string>
    <string name="text_post_title">Other</string>
    <string name="content_tab_tile">Content</string>
    <string name="audio_tab_title">Audios</string>
    <string name="video_tab_title">Videos</string>
    <string name="latest_content_header">Latest content from</string>
    <string name="discover_content_header">Discover new content with</string>
    <plurals name="secondsAgo">
        <item quantity="one" formatted="true">%d second ago</item>
        <item quantity="other" formatted="true">%d seconds ago</item>
    </plurals>
    <plurals name="minutesAgo">
        <item quantity="one" formatted="true">%d minute ago</item>
        <item quantity="other" formatted="true">%d minutes ago</item>
    </plurals>
    <plurals name="hoursAgo">
        <item quantity="one" formatted="true">%d hour ago</item>
        <item quantity="other" formatted="true">%d hours ago</item>
    </plurals>
    <plurals name="daysAgo">
        <item quantity="one" formatted="true">%d day ago</item>
        <item quantity="other" formatted="true">%d days ago</item>
    </plurals>
    <plurals name="monthsAgo">
        <item quantity="one" formatted="true">%d month ago</item>
        <item quantity="other" formatted="true">%d months ago</item>
    </plurals>
    <plurals name="yearsAgo">
        <item quantity="one" formatted="true">%d year ago</item>
        <item quantity="other" formatted="true">%d years ago</item>
    </plurals>
    <string name="network_error">Could not reach Floatplane servers! Check your connection!</string>
    <string name="bad_request">Bad Request. Check if there\'s a newer app version!</string>
    <string name="needs_captcha">API requires Captcha. Please report this issue on Github!</string>
    <string name="user_pass_incorrect">The username or password is incorrect!</string>
    <string name="bad_token">Authentication Code Invalid, try again or check if the time is correct on your device!</string>
    <string name="login_first">Please login to first before attempting to access resources!</string>
    <string name="forbidden">Request forbidden! Please sign in again!</string>
    <string name="not_found">Not Found! The resource may have been delisted or deleted.</string>
    <string name="post_title_example">Nintendo 3DS Capture and Development Kit</string>
    <string name="posted_when_example">30 minutes ago</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>