<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacingTitle"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/login_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/loginFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:theme="@style/TextInputLayout.Login"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_label"
                    android:imeOptions="actionNext"
                    android:inputType="text|textEmailAddress"
                    android:textColorHint="#B0BEC5"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/TextInputLayout.Login"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_label"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:textColorHint="#B0BEC5"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/spacingLogin"
                android:backgroundTint="@color/blue"
                android:text="@string/login_label"
                android:textAllCaps="false"
                android:textColor="#212121"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/TwoFactorFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:theme="@style/TextInputLayout.Login"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/two_factor_token"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/two_factor_hint"
                    android:imeOptions="actionGo"
                    android:inputType="text|textEmailAddress"
                    android:textColorHint="#B0BEC5"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/send_token_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/blue"
                android:text="@string/send_auth_token"
                android:textAllCaps="false"
                android:textColor="#212121"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:background="@color/dark_blue"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:indeterminateTint="@color/white"
                android:progressTint="@color/white" />

            <TextView
                android:id="@+id/loading_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingLogin"
                android:text="@string/logging_in_string"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>